Code cleanup (#585)