@@ -71,7 +71,7 @@ public class GtfsFileUtilsTransformationTest {
 
     public static void assertRouteRouteTypesAreConvertedToBasicGtfsValues(File out) {
         List<String> routeLines = IOUtils.readLines(new ByteArrayInputStream(ZipFileUtils.extractFileFromZipFile(out, GtfsConstants.ROUTES_TXT)), StandardCharsets.UTF_8);
-        routeLines.remove(0); // remove header
+        routeLines.removeFirst(); // remove header
         assertEquals(10, routeLines.size());
 
         List<String> transformedRouteTypes = routeLines.stream().map(routeLine -> routeLine.split(",")[4]).toList();
@@ -84,7 +84,7 @@ public class GtfsFileUtilsTransformationTest {
 
     public static void assertStopVehicleTypesAreConvertedToBasicGtfsValues(File out) {
         List<String> stopLines = IOUtils.readLines(new ByteArrayInputStream(ZipFileUtils.extractFileFromZipFile(out, GtfsConstants.STOPS_TXT)), StandardCharsets.UTF_8);
-        stopLines.remove(0); // remove header
+        stopLines.removeFirst(); // remove header
         assertThat(stopLines.get(1)).as("Line with valid value 701 should be converted to 3").endsWith(",3,");
         assertThat(stopLines.get(2)).as("Line with extended value 1012 should be converted to 4").endsWith(",4,");
         assertThat(stopLines.get(3)).as("Line with extended value 1601 should be converted to 3 (default)").endsWith(",3,");
